--- a/data/connection_setup.ipynb
+++ b/data/connection_setup.ipynb
@@ -1,11 +1,341 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Connection Setup\n",
+    "## Description\n",
+    "Even though we are allowed to use the Pecan Street data for academic research the licensing doesn't allow it to be freely distributed. In order to comply with this requirement I have setup a private local MySQL server as well as documented the steps to reproduce this database from their raw files. This notebook demonstrates the basic requirements for connecting and fetching data from the MySQL server. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Credentials\n",
+    "This utilizes a credentials file that has been excluded from the repository for security purposes. If you require access please email me, blake.kleinhans@colorado.edu, and I can send you a copy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load credentials\n",
+    "credentials_file_path = '../credentials.json'\n",
+    "with open(credentials_file_path) as credentials_file:\n",
+    "    credentials = json.load(credentials_file)\n",
+    "    \n",
+    "# connect to database\n",
+    "engine = create_engine('mysql+mysqldb://{user}@{host}/{db}'.format(\n",
+    "    user = credentials['user'],\n",
+    "    host = credentials['host'],\n",
+    "    db = credentials['db']\n",
+    "))\n",
+    "\n",
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Query Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tables_in_pecan_street</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>onemin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>temps</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Tables_in_pecan_street\n",
+       "0                 onemin\n",
+       "1                  temps"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show tables\n",
+    "tables = pd.read_sql('SHOW TABLES', conn)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Field</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Null</th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Default</th>\n",
+       "      <th>Extra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>index</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>MUL</td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dataid</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>localminute</td>\n",
+       "      <td>text</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>air1</td>\n",
+       "      <td>double</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>air2</td>\n",
+       "      <td>double</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>year</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>month</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>day</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>hour</td>\n",
+       "      <td>bigint(20)</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>day_of_week</td>\n",
+       "      <td>text</td>\n",
+       "      <td>YES</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>86 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Field        Type Null  Key Default Extra\n",
+       "0         index  bigint(20)  YES  MUL    None      \n",
+       "1        dataid  bigint(20)  YES         None      \n",
+       "2   localminute        text  YES         None      \n",
+       "3          air1      double  YES         None      \n",
+       "4          air2      double  YES         None      \n",
+       "..          ...         ...  ...  ...     ...   ...\n",
+       "81         year  bigint(20)  YES         None      \n",
+       "82        month  bigint(20)  YES         None      \n",
+       "83          day  bigint(20)  YES         None      \n",
+       "84         hour  bigint(20)  YES         None      \n",
+       "85  day_of_week        text  YES         None      \n",
+       "\n",
+       "[86 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# describe table\n",
+    "pd.read_sql('DESC onemin', conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 661, 1642, 2335, 2818, 3039, 3456, 3538, 4031, 4373, 4767, 5746,\n",
+       "       6139, 7536, 7719, 7800, 7901, 7951, 8565, 9019, 9278, 8156, 8386,\n",
+       "       2361, 9922, 9160], dtype=int64)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List the building ids\n",
+    "dataids_df = pd.read_sql('SELECT DISTINCT(dataid) FROM onemin', conn)\n",
+    "dataids = dataids_df['dataid'].values\n",
+    "dataids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fetch daily data for one residence\n",
+    "dataid = dataids[0]\n",
+    "\n",
+    "daily_usage = pd.read_sql('SELECT * FROM usage_daily WHERE dataid == {dataid}'.format(dataid = dataid), conn)\n",
+    "daily_usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fetch hourly data for one residence\n",
+    "daily_usage = pd.read_sql('SELECT * FROM usage_hourly WHERE dataid == {dataid}'.format(dataid = dataid), conn)\n",
+    "daily_usage"
+   ]
   }
  ],
  "metadata": {
